# todocli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  compile_flags.txt  package-lock.json  todocli.json
src/: CommandHandlerer.cpp  CommandHandlerer.h  CommandHandlerer.hpp  cc.cpp  cc.h  error.h  error.hpp  fs.cpp  fs.h  fs.hpp  main.cpp  reqs.h  reqs.hpp
